--- a/dashboard.html
+++ b/dashboard.html
@@ -5,67 +5,66 @@
 <title>📊 Dashboard ยอดขาย</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+<link rel="icon" href="data:,">
+
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
-
-<link rel="icon" href="data:,">
 </head>
 
-<body class="bg-slate-900 text-white min-h-screen p-3">
+<body class="bg-slate-900 text-white min-h-screen p-4">
 
 <div class="max-w-7xl mx-auto space-y-4">
 
   <!-- Header -->
-  <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-3">
+  <div class="flex justify-between items-center">
     <h1 class="text-2xl font-bold">📊 Dashboard ยอดขาย</h1>
-    <button
-      onclick="exportExcel()"
+    <button onclick="exportExcel()"
       class="bg-green-600 px-4 py-2 rounded font-bold">
-      📤 Export Excel
+      📥 Export Excel
     </button>
   </div>
 
   <!-- Summary -->
-  <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
-    <div class="bg-slate-800 p-4 rounded-xl">
+  <div class="grid md:grid-cols-3 gap-4">
+    <div class="bg-slate-800 p-4 rounded">
       <div class="text-sm text-gray-400">ยอดขายวันนี้</div>
       <div id="todayTotal" class="text-2xl font-bold">0 ฿</div>
     </div>
-    <div class="bg-slate-800 p-4 rounded-xl">
+    <div class="bg-slate-800 p-4 rounded">
       <div class="text-sm text-gray-400">ยอดขายเดือนนี้</div>
       <div id="monthTotal" class="text-2xl font-bold">0 ฿</div>
     </div>
-    <div class="bg-slate-800 p-4 rounded-xl">
+    <div class="bg-slate-800 p-4 rounded">
       <div class="text-sm text-gray-400">จำนวนรายการขาย</div>
       <div id="orderCount" class="text-2xl font-bold">0</div>
     </div>
   </div>
 
   <!-- Charts -->
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-    <div class="bg-slate-800 p-4 rounded-xl">
+  <div class="grid md:grid-cols-2 gap-4">
+    <div class="bg-slate-800 p-4 rounded">
       <h2 class="font-bold mb-2">📈 ยอดขายรายวัน</h2>
       <canvas id="dailyChart"></canvas>
     </div>
-    <div class="bg-slate-800 p-4 rounded-xl">
+    <div class="bg-slate-800 p-4 rounded">
       <h2 class="font-bold mb-2">🍜 ยอดขายตามเมนู</h2>
       <canvas id="productChart"></canvas>
     </div>
   </div>
 
   <!-- Table -->
-  <div class="bg-slate-800 p-4 rounded-xl">
-    <h2 class="font-bold mb-3">🧾 รายการขายทั้งหมด</h2>
-    <div class="overflow-x-auto">
+  <div class="bg-slate-800 p-4 rounded">
+    <h2 class="font-bold mb-3">📄 รายการขายทั้งหมด</h2>
+    <div class="overflow-auto">
       <table class="w-full text-sm">
         <thead>
           <tr class="border-b border-slate-600">
-            <th class="py-2 text-left">วันที่</th>
-            <th class="text-left">เมนู</th>
-            <th class="text-right">จำนวน</th>
-            <th class="text-right">ยอด</th>
+            <th class="text-left p-2">วันที่</th>
+            <th class="text-left p-2">เมนู</th>
+            <th class="text-right p-2">จำนวน</th>
+            <th class="text-right p-2">ยอด</th>
           </tr>
         </thead>
         <tbody id="saleTable"></tbody>
@@ -86,13 +85,21 @@ const sb = supabase.createClient(
 let saleRows = []
 let productMap = {}
 
-/* ================= LOAD PRODUCTS ================= */
+let dailyChart, productChart
+
+/* ================= UTILS ================= */
+function toThaiDate(iso) {
+  const d = new Date(iso)
+  d.setHours(d.getHours() + 7)
+  return d.toISOString().slice(0, 10)
+}
+
+/* ================= LOAD DATA ================= */
 async function loadProducts() {
   const { data } = await sb.from("products").select("id,name")
   ;(data || []).forEach(p => productMap[p.id] = p.name)
 }
 
-/* ================= LOAD SALES (FIXED) ================= */
 async function loadSales() {
   const { data, error } = await sb
     .from("order_items")
@@ -100,16 +107,12 @@ async function loadSales() {
       product_id,
       qty,
       price,
-      orders!inner(
-        paid_at,
-        status
-      )
+      orders!inner(paid_at)
     `)
     .eq("status", "done")
-    .eq("orders.status", "paid")
 
   if (error) {
-    console.error("loadSales error", error)
+    console.error(error)
     return
   }
 
@@ -119,7 +122,7 @@ async function loadSales() {
 
 /* ================= RENDER ================= */
 function renderDashboard() {
-  const today = new Date().toISOString().slice(0,10)
+  const today = toThaiDate(new Date().toISOString())
   const month = today.slice(0,7)
 
   let todayTotal = 0
@@ -129,14 +132,15 @@ function renderDashboard() {
   const productSum = {}
 
   saleRows.forEach(r => {
-    const date = r.orders.paid_at.slice(0,10)
+    const date = toThaiDate(r.orders.paid_at)
     const total = r.qty * r.price
 
     if (date === today) todayTotal += total
     if (date.startsWith(month)) monthTotal += total
 
     dailyMap[date] = (dailyMap[date] || 0) + total
-    productSum[r.product_id] = (productSum[r.product_id] || 0) + total
+    productSum[r.product_id] =
+      (productSum[r.product_id] || 0) + total
   })
 
   todayTotal.textContent = todayTotal.toLocaleString() + " ฿"
@@ -150,50 +154,62 @@ function renderDashboard() {
 
 /* ================= CHARTS ================= */
 function renderDailyChart(map) {
-  const labels = Object.keys(map)
-  const data = Object.values(map)
+  const labels = Object.keys(map).sort()
+  const data = labels.map(d => map[d])
 
-  new Chart(document.getElementById("dailyChart"), {
-    type: "line",
-    data: {
-      labels,
-      datasets: [{
-        label: "ยอดขาย",
-        data,
-        borderColor: "#22c55e"
-      }]
+  if (dailyChart) dailyChart.destroy()
+  dailyChart = new Chart(
+    document.getElementById("dailyChart"),
+    {
+      type: "line",
+      data: {
+        labels,
+        datasets: [{
+          label: "ยอดขาย",
+          data,
+          borderColor: "#22c55e",
+          tension: 0.3
+        }]
+      }
     }
-  })
+  )
 }
 
 function renderProductChart(map) {
-  const labels = Object.keys(map).map(id => productMap[id])
+  const labels = Object.keys(map).map(id => productMap[id] || "-")
   const data = Object.values(map)
 
-  new Chart(document.getElementById("productChart"), {
-    type: "bar",
-    data: {
-      labels,
-      datasets: [{
-        label: "ยอดขาย",
-        data,
-        backgroundColor: "#3b82f6"
-      }]
+  if (productChart) productChart.destroy()
+  productChart = new Chart(
+    document.getElementById("productChart"),
+    {
+      type: "bar",
+      data: {
+        labels,
+        datasets: [{
+          label: "ยอดขาย",
+          data,
+          backgroundColor: "#3b82f6"
+        }]
+      }
     }
-  })
+  )
 }
 
 /* ================= TABLE ================= */
 function renderTable() {
   saleTable.innerHTML = ""
+
   saleRows.forEach(r => {
     const tr = document.createElement("tr")
-    tr.className = "border-b border-slate-700"
+    const date = toThaiDate(r.orders.paid_at)
+    const total = r.qty * r.price
+
     tr.innerHTML = `
-      <td class="py-1">${r.orders.paid_at.slice(0,10)}</td>
-      <td>${productMap[r.product_id]}</td>
-      <td class="text-right">${r.qty}</td>
-      <td class="text-right">${(r.qty*r.price).toLocaleString()}</td>
+      <td class="p-2">${date}</td>
+      <td class="p-2">${productMap[r.product_id]}</td>
+      <td class="p-2 text-right">${r.qty}</td>
+      <td class="p-2 text-right">${total}</td>
     `
     saleTable.appendChild(tr)
   })
@@ -202,16 +218,17 @@ function renderTable() {
 /* ================= EXPORT ================= */
 function exportExcel() {
   const rows = saleRows.map(r => ({
-    date: r.orders.paid_at,
-    product: productMap[r.product_id],
-    qty: r.qty,
-    total: r.qty * r.price
+    วันที่: toThaiDate(r.orders.paid_at),
+    เมนู: productMap[r.product_id],
+    จำนวน: r.qty,
+    ยอด: r.qty * r.price
   }))
 
   const ws = XLSX.utils.json_to_sheet(rows)
   const wb = XLSX.utils.book_new()
   XLSX.utils.book_append_sheet(wb, ws, "Sales")
-  XLSX.writeFile(wb, "sales.xlsx")
+
+  XLSX.writeFile(wb, "sales_report.xlsx")
 }
 
 /* ================= INIT ================= */
